--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -1,5 +1,13 @@
 [global_config]
 [keybindings]
+[profiles]
+  [[default]]
+    background_color = "#282828"
+    background_darkness = 0.97
+    background_type = transparent
+    cursor_color = "#aaaaaa"
+    font = Z003 Bold Italic 20
+    foreground_color = "#ebdbb2"
 [layouts]
   [[default]]
     [[[child1]]]
@@ -9,11 +17,3 @@
       parent = ""
       type = Window
 [plugins]
-[profiles]
-  [[default]]
-    background_color = "#002b36"
-    background_darkness = 0.98
-    background_type = transparent
-    cursor_color = "#aaaaaa"
-    font = Chilanka Italic 10
-    foreground_color = "#839496"
