--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -6,7 +6,7 @@
     background_darkness = 0.97
     background_type = transparent
     cursor_color = "#aaaaaa"
-    font = MonoLisa 14
+    font = Anonymous Pro 14
     foreground_color = "#ebdbb2"
     use_system_font = False
 [layouts]
