--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -6,7 +6,7 @@
     background_darkness = 0.97
     background_type = transparent
     cursor_color = "#aaaaaa"
-    font = JetBrains Mono Bold 14
+    font = MonoLisa 12
     foreground_color = "#ebdbb2"
     use_system_font = False
 [layouts]
