--- a/playbook/roles/vim/tasks/main.yaml
+++ b/playbook/roles/vim/tasks/main.yaml
@@ -109,6 +109,12 @@
     dest: ~/.vim/bundle/vim-go
     update: yes
 
+- name: addon vim-go
+  ansible.builtin.git:
+    repo: 'https://github.com/junegunn/fzf.vim'
+    dest: ~/.vim/bundle/vim-fzf
+    update: yes
+
 - name: Create symbolic link for vim_vim-jsx-pretty
   ansible.builtin.file:
     src: ~/.vim/bundle/vim-jsx-pretty/autoload/jsx_pretty/indent.vim
