--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -2,12 +2,12 @@
 [keybindings]
 [profiles]
   [[default]]
-    background_color = "#282828"
+    background_color = "#002b36"
     background_darkness = 0.97
     background_type = transparent
     cursor_color = "#aaaaaa"
     font = MonoLisa 12
-    foreground_color = "#ebdbb2"
+    foreground_color = "#839496"
     use_system_font = False
 [layouts]
   [[default]]
