--- a/playbook/roles/dotfiles/tasks/main.yaml
+++ b/playbook/roles/dotfiles/tasks/main.yaml
@@ -13,6 +13,11 @@
     url: https://raw.githubusercontent.com/tinoschroeter/dotfiles/master/.banner
     dest: ~/.banner
 
+- name: get .gitconfig
+  ansible.builtin.get_url:
+    url: https://raw.githubusercontent.com/tinoschroeter/dotfiles/master/.gitconfig
+    dest: ~/.gitconfig
+
 - name: get .p10k.zsh
   ansible.builtin.get_url:
     url: https://raw.githubusercontent.com/tinoschroeter/dotfiles/master/.p10k.zsh
