--- a/playbook/roles/vim/tasks/main.yaml
+++ b/playbook/roles/vim/tasks/main.yaml
@@ -115,6 +115,12 @@
     dest: ~/.vim/bundle/vim-fzf
     update: yes
 
+- name: addon YouCompleteMe
+  ansible.builtin.git:
+    repo: 'https://github.com/Valloric/YouCompleteMe.git'
+    dest: ~/.vim/bundle/YouCompleteMe
+    update: yes
+
 - name: Create symbolic link for vim_vim-jsx-pretty
   ansible.builtin.file:
     src: ~/.vim/bundle/vim-jsx-pretty/autoload/jsx_pretty/indent.vim
