--- a/playbook/roles/pip/tasks/main.yaml
+++ b/playbook/roles/pip/tasks/main.yaml
@@ -2,5 +2,6 @@
   pip:
     name: "{{ item }}"
   with_items:
-    - pipenv    # creates and manages a virtualenv for your projects.
-    - salt-lint # checks Salt State files (SLS) for best practices and behavior that could potentially be improved.
+    - pipenv     # creates and manages a virtualenv for your projects.
+    - salt-lint  # checks Salt State files (SLS) for best practices and behavior that could potentially be improved.
+    - revChatGPT # Reverse Engineered ChatGPT by OpenAI. Extensible for chatbots etc. (https://github.com/acheong08/ChatGPT) 
