--- a/playbook/roles/software/tasks/main.yaml
+++ b/playbook/roles/software/tasks/main.yaml
@@ -29,8 +29,6 @@
       - dstat             # versatile tool for generating system resource statistics
       - firefox           # browser
       - firefox-locale-de
-      - firefox-locale-en
-      - git               # fast, scalable, distributed revision control system
       - gnupg             # GNU Privacy Guard
       - htop              # interactively monitor the system’s vital resources.
       - iotop             # iotop watches I/O usage information output by the Linux kernel  
@@ -44,7 +42,7 @@
       - nodejs            # V8 javascript runtime 
       - pwgen             # Automatic Password generation
       - python-setuptools # 
-      - python3-dev
+      - python3-dev       # 
       - python3-pip       # package installer for Python.
       - rdesktop          # RDP client for Windows Terminal Server 
       - ripgrep           # ripgrep is a line-oriented search tool that recursively searches the current directory for a regex pattern.
