--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -1,20 +1,38 @@
 [global_config]
+  focus = system
+  title_at_bottom = True
+  title_hide_sizetext = True
+  title_transmit_bg_color = "#d30102"
 [keybindings]
 [profiles]
   [[default]]
-    background_color = "#002b36"
+    background_color = "#282828"
     background_darkness = 0.97
     background_type = transparent
-    cursor_color = "#aaaaaa"
-    font = MonoLisa 12
-    foreground_color = "#839496"
+    cursor_color = "#7c6f64"
+    foreground_color = "#ebdbb2"
+    scrollbar_position = hidden
+    scrollback_lines = 1000
+    palette = "#181818:#cc241d:#98971a:#d79921:#458588:#b16286:#689d6a:#ebdbb2:#928374:#fb4934:#b8bb26:#fabd2f:#83a598:#d3869b:#8ec07c:#ebdbb2"
+  [[gruvbox-dark]]
+    background_color = "#282828"
+    cursor_color = "#7c6f64"
+    font = MonoLisa Bold 12
+    foreground_color = "#ebdbb2"
+    palette = "#181818:#cc241d:#98971a:#d79921:#458588:#b16286:#689d6a:#ebdbb2:#928374:#fb4934:#b8bb26:#fabd2f:#83a598:#d3869b:#8ec07c:#ebdbb2"
     use_system_font = False
+  [[gruvbox-light]]
+    background_color = "#eee8d5"
+    cursor_color = "#002b36"
+    foreground_color = "#002b36"
+    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
 [layouts]
   [[default]]
     [[[child1]]]
-      parent = window0
       type = Terminal
+      parent = window0
+      profile = gruvbox-dark
     [[[window0]]]
-      parent = ""
       type = Window
+      parent = ""
 [plugins]
