update: cSpell userWords

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -12,9 +12,14 @@
     "line_length": false
   },
   "cSpell.userWords": [
-    "Deploye",
+    "deploye",
+    "edgeworkers",
+    "Edgekv",
+    "Onsale",
+    "Onsales",
     "configmap",
     "deployen",
+    "erratbar",
     "eticket",
     "eventim",
     "fansale",
