add: music downloader

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -17,6 +17,7 @@
     "Edgekv",
     "Onsale",
     "Onsales",
+    "autoload",
     "configmap",
     "deployen",
     "erratbar",
@@ -36,6 +37,7 @@
     "markdownlint",
     "nocache",
     "noselect",
+    "nvim",
     "pdap",
     "psql",
     "quickfix",
