--- a/playbook/roles/vim/tasks/main.yaml
+++ b/playbook/roles/vim/tasks/main.yaml
@@ -115,12 +115,6 @@
     dest: ~/.vim/bundle/vim-snippets
     update: yes
 
-- name: addon vim-polyglot A collection of language packs for Vim.
-  ansible.builtin.git:
-    repo: 'https://github.com/sheerun/vim-polyglot.git'
-    dest: ~/.vim/bundle/vim-polyglot
-    update: yes
-
 - name: addon vim-jsx-pretty
   ansible.builtin.git:
     repo: 'https://github.com/MaxMEllon/vim-jsx-pretty.git'
@@ -149,7 +143,7 @@
   ansible.builtin.git:
     repo: 'https://github.com/iamcco/markdown-preview.nvim.git'
     dest: ~/.vim/bundle/markdown-preview.nvim
-    update: yes
+    update: no
 
 - name: Create symbolic link for vim_vim-jsx-pretty
   ansible.builtin.file:
