add: markdown linter rules

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -9,40 +9,14 @@
   "suggest.snippetIndicator": "",
   "markdownlint.config": {
     "default": true,
-    "line_length": false
+    "line_length": false,
+    "MD007": { "indent": 4 },
+    "MD009": { "br_spaces": 2 }
   },
   "cSpell.userWords": [
-    "Deploye",
-    "EDGEWORKERS",
-    "Edgekv",
-    "Onsale",
-    "Onsales",
-    "autoload",
-    "configmap",
-    "deployen",
-    "erratbar",
-    "eticket",
-    "eventim",
-    "fansale",
-    "galera",
-    "grafana",
-    "highstate",
-    "journalctl",
-    "keymap",
-    "kubectl",
-    "kubernetes",
-    "loadbalancer",
-    "loadbalancers",
-    "lucene",
-    "markdownlint",
-    "nocache",
-    "noselect",
-    "nvim",
-    "pdap",
-    "psql",
-    "quickfix",
-    "seatmap",
-    "teraform",
+    "AKAMAICDN",
+    "xhost",
+    "yaegassy",
     "zabbix"
   ]
 }
